--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Grup_ 8_Annonser.csproj
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Grup_ 8_Annonser.csproj
@@ -242,6 +242,8 @@
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\Read.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\Home\Update.cshtml" />
+    <Content Include="Views\Home\Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
