--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Web.config
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Web.config
@@ -52,16 +52,8 @@
     </providers>
   </entityFramework>
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_IServiceAnnons" />
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="http://localhost:52167/ServiceAnnons.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceAnnons"
-        contract="ServiceReferenceAnnons.IServiceAnnons" name="BasicHttpBinding_IServiceAnnons" />
-    </client>
+    <bindings />
+    <client />
     <behaviors>
       <serviceBehaviors>
         <behavior name="">
