--- a/AdvertisingServiceKod/AdvertisingService/AdvertisingService.csproj
+++ b/AdvertisingServiceKod/AdvertisingService/AdvertisingService.csproj
@@ -41,7 +41,15 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -61,10 +69,38 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="adModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>adModel.Context.cs</LastGenOutput>
+      <DependentUpon>adModel.edmx</DependentUpon>
+    </Content>
+    <Content Include="adModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>adModel.edmx</DependentUpon>
+      <LastGenOutput>adModel.cs</LastGenOutput>
+    </Content>
     <Content Include="ServiceAdvertising.svc" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="adModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>adModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="adModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>adModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="adModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>adModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Annonser.cs">
+      <DependentUpon>adModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="IServiceAdvertising.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceAdvertising.svc.cs">
@@ -75,12 +111,23 @@
     <Folder Include="App_Data\" />
   </ItemGroup>
   <ItemGroup>
+    <EntityDeploy Include="adModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>adModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="adModel.edmx.diagram">
+      <DependentUpon>adModel.edmx</DependentUpon>
+    </Content>
+    <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
     <None Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
