--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/Web.config
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/Web.config
@@ -52,8 +52,16 @@
     </providers>
   </entityFramework>
   <system.serviceModel>
-    <bindings />
-    <client />
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IServiceAdvertising" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://193.10.202.78/AdvertisingService/ServiceAdvertising.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceAdvertising"
+        contract="ServiceReferenceAnnons.IServiceAdvertising" name="BasicHttpBinding_IServiceAdvertising" />
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior name="">
