--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/bin/Grup_ 8_Annonser.dll.config
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/bin/Grup_ 8_Annonser.dll.config
@@ -54,13 +54,13 @@
   <system.serviceModel>
     <bindings>
       <basicHttpBinding>
-        <binding name="BasicHttpBinding_IServiceAnnons" />
+        <binding name="BasicHttpBinding_IServiceAdvertising" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:52167/ServiceAnnons.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceAnnons"
-        contract="ServiceReferenceAnnons.IServiceAnnons" name="BasicHttpBinding_IServiceAnnons" />
+      <endpoint address="http://193.10.202.78/AdvertisingService/ServiceAdvertising.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceAdvertising"
+        contract="ServiceReferenceAnnons.IServiceAdvertising" name="BasicHttpBinding_IServiceAdvertising" />
     </client>
     <behaviors>
       <serviceBehaviors>
