--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/bin/Grup_ 8_Annonser.dll.config
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/bin/Grup_ 8_Annonser.dll.config
@@ -52,16 +52,8 @@
     </providers>
   </entityFramework>
   <system.serviceModel>
-    <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding_IServiceAdvertising" />
-      </basicHttpBinding>
-    </bindings>
-    <client>
-      <endpoint address="http://193.10.202.78/AdvertisingService/ServiceAdvertising.svc"
-        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceAdvertising"
-        contract="ServiceReferenceAnnons.IServiceAdvertising" name="BasicHttpBinding_IServiceAdvertising" />
-    </client>
+    <bindings />
+    <client />
     <behaviors>
       <serviceBehaviors>
         <behavior name="">
