--- a/Grup_ 8_Annonser/Grup_ 8_Annonser/bin/Grup_ 8_Annonser.dll.config
+++ b/Grup_ 8_Annonser/Grup_ 8_Annonser/bin/Grup_ 8_Annonser.dll.config
@@ -52,8 +52,20 @@
     </providers>
   </entityFramework>
   <system.serviceModel>
-    <bindings />
-    <client />
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_ILoggin" />
+        <binding name="BasicHttpBinding_IServiceAdvertising" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://193.10.202.71/SysAdminLogin/Loggin.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ILoggin"
+        contract="ServiceReferenceLogin.ILoggin" name="BasicHttpBinding_ILoggin" />
+      <endpoint address="http://193.10.202.78/AdvertisingService/ServiceAdvertising.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IServiceAdvertising"
+        contract="ServiceReferenceAdvertising.IServiceAdvertising" name="BasicHttpBinding_IServiceAdvertising" />
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior name="">
