--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ Grup_ 8_Annonser/Grup_ 8_Annonser/bin/Grup_ 8_Annonser.pdb
 Grup_ 8_Annonser/Grup_ 8_Annonser/obj/Debug/Grup_ 8_Annonser.csprojResolveAssemblyReference.cache
 Grup_ 8_Annonser/Grup_ 8_Annonser/obj/Debug/Grup_ 8_Annonser.dll
 Grup_ 8_Annonser/Grup_ 8_Annonser/obj/Debug/Grup_ 8_Annonser.pdb
+AdvertisingServiceKod/AdvertisingService/.vs/AdvertisingService/v15/.suo
+AdvertisingServiceKod/AdvertisingService/.vs/AdvertisingService/v15/Server/sqlite3/storage.ide
+AdvertisingServiceKod/AdvertisingService/.vs/config/applicationhost.config
+AdvertisingServiceKod/AdvertisingService/.vs/config/applicationhost.config
