--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ AdvertisingServiceKod/AdvertisingService/.vs/AdvertisingService/v15/.suo
 AdvertisingServiceKod/AdvertisingService/.vs/AdvertisingService/v15/Server/sqlite3/storage.ide
 AdvertisingServiceKod/AdvertisingService/.vs/config/applicationhost.config
 AdvertisingServiceKod/AdvertisingService/.vs/config/applicationhost.config
+Grup_ 8_Annonser/Grup_ 8_Annonser/obj/Debug/Grup_ 8_Annonser.pdb
+Grup_ 8_Annonser/Grup_ 8_Annonser/obj/Debug/Grup_ 8_Annonser.dll
+Grup_ 8_Annonser/Grup_ 8_Annonser/Controllers/HomeController.cs
+Grup_ 8_Annonser/Grup_ 8_Annonser/bin/Grup_ 8_Annonser.pdb
+Grup_ 8_Annonser/.vs/Grup_ 8_Annonser/v15/Server/sqlite3/storage.ide
+Grup_ 8_Annonser/Grup_ 8_Annonser/bin/Grup_ 8_Annonser.dll
+Grup_ 8_Annonser/.vs/Grup_ 8_Annonser/v15/.suo
