--- a/AdvertisingServiceKod/AdvertisingService/AdvertisingService.csproj
+++ b/AdvertisingServiceKod/AdvertisingService/AdvertisingService.csproj
@@ -102,6 +102,7 @@
       <DependentUpon>adModel.tt</DependentUpon>
     </Compile>
     <Compile Include="IServiceAdvertising.cs" />
+    <Compile Include="Logs\Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceAdvertising.svc.cs">
       <DependentUpon>ServiceAdvertising.svc</DependentUpon>
