--- a/WFSpelarPortalAdmin1/WFSpelarPortalAdmin1/WFSpelarPortalAdmin1.csproj
+++ b/WFSpelarPortalAdmin1/WFSpelarPortalAdmin1/WFSpelarPortalAdmin1.csproj
@@ -41,7 +41,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.ServiceProcess" />
